--- a/index.html
+++ b/index.html
@@ -20,25 +20,32 @@
   <body>
     <!--TOP LINE (Header )-->
     <header>
-      <nav class="nav">
-        <a
-          href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
-          class="logo"
-        >
-          <span class="logo-web">Web</span>Studio
-        </a>
-        <ul class="list-ul site-nav">
-          <li><a class="link current" href="./index.html">Студия</a></li>
-          <li>
-            <a class="link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <a class="contacts" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
+      <div class="container header">
+        <div>
+          <nav class="nav">
+            <a
+              href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
+              class="logo"
+            >
+              <span class="logo-web">Web</span>Studio
+            </a>
+            <ul class="list-ul site-nav">
+              <li><a class="link current" href="./index.html">Студия</a></li>
+              <li>
+                <a class="link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li><a class="link" href="">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div>
+          <a class="contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
+        </div>
+      </div>
     </header>
     <!--MAIN-->
     <main>
@@ -48,129 +55,141 @@
         <button class="button-hero" type="button">Заказать услугу</button>
       </section>
       <!--peculiarities(особенности)-->
-      <section>
-        <ul class="list-ul">
-          <li>
-            <h3 class="title title-pecul">Внимание к деталям</h3>
-            <p class="section-desc">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title title-pecul">Пунктуальность</h3>
-            <p class="section-desc">
-              Задача организации, в особенности же рамки и место обучения
-              кадров. влечет за собой
-            </p>
-          </li>
-          <li>
-            <h3 class="title title-pecul">Планирование</h3>
-            <p class="section-desc">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="title title-pecul">Современные технологии</h3>
-            <p class="section-desc">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section-pecul">
+        <div class="container">
+          <ul class="list-ul">
+            <li>
+              <h3 class="title title-pecul">Внимание к деталям</h3>
+              <p class="section-desc">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="title title-pecul">Пунктуальность</h3>
+              <p class="section-desc">
+                Задача организации, в особенности же рамки и место обучения
+                кадров. влечет за собой
+              </p>
+            </li>
+            <li>
+              <h3 class="title title-pecul">Планирование</h3>
+              <p class="section-desc">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="title title-pecul">Современные технологии</h3>
+              <p class="section-desc">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!--What are we doing-->
-      <section>
-        <h2 class="title title-do">Чем мы занимаемся</h2>
-        <ul class="list-ul">
-          <li>
-            <img
-              src="img/our_work/img-1.jpg"
-              alt="Пишим код"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="img/our_work/img-2.jpg"
-              alt="Синхронизация с тел."
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="img/our_work/img-3.jpg"
-              alt="палитра цветов"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="section-do">
+        <div class="container">
+          <h2 class="title title-do">Чем мы занимаемся</h2>
+          <ul class="list-ul">
+            <li>
+              <img
+                src="img/our_work/img-1.jpg"
+                alt="Пишим код"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="img/our_work/img-2.jpg"
+                alt="Синхронизация с тел."
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="img/our_work/img-3.jpg"
+                alt="палитра цветов"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--our team-->
       <section class="section-team">
-        <h2 class="title title-teams">Наша команда</h2>
-        <ul class="list-ul">
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgIgor.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Игорь Демьяненко</h3>
-            <p class="section-desc">Product Designer</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgOlga.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Ольга Репина</h3>
-            <p class="section-desc">Frontend Developer</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgHikola.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Николай Тарасов</h3>
-            <p class="section-desc">Marketing</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgMikl.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Михаил Ермаков</h3>
-            <p class="section-desc">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title title-teams">Наша команда</h2>
+          <ul class="list-ul">
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgIgor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="title title-team">Игорь Демьяненко</h3>
+              <p class="team-desc">Product Designer</p>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgOlga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="title title-team">Ольга Репина</h3>
+              <p class="team-desc">Frontend Developer</p>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgHikola.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="title title-team">Николай Тарасов</h3>
+              <p class="team-desc">Marketing</p>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgMikl.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="title title-team">Михаил Ермаков</h3>
+              <p class="team-desc">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <a href="https://alex-nik-vel.github.io/goit-markup-hw-02/" class="logo">
-        <span class="logo-web">Web</span>Studio
-      </a>
-      <address class="footer-addres">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a class="footer-contacts" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
+      <div class="container">
+        <a
+          href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
+          class="logo"
         >
-        <a class="footer-contacts" href="tel:+38-096-111-11-11"
-          >+38 096 111 11 11</a
-        >
-      </address>
+          <span class="logo-web">Web</span>Studio
+        </a>
+        <address class="footer-addres">
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a class="footer-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="footer-contacts" href="tel:+38-096-111-11-11"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
