--- a/portfolio.html
+++ b/portfolio.html
@@ -19,151 +19,167 @@
   </head>
   <body>
     <header>
-      <nav class="nav">
+      <div class="container header">
+        <div>
+          <nav class="nav">
+            <a
+              href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
+              class="logo"
+            >
+              <span class="logo-web">Web</span>Studio
+            </a>
+            <ul class="list-ul site-nav">
+              <li><a class="link current" href="./index.html">Студия</a></li>
+              <li>
+                <a class="link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li><a class="link" href="">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div>
+          <a class="contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
+        </div>
+      </div>
+    </header>
+    <!-- main porfolio -->
+    <main>
+      <section class="portfo-section">
+        <div class="container">
+          <!-- lot of booton -->
+          <div class="btn-portfolio ">
+            <ul class="list-ul">
+              <li>
+                <button class="button-portfo" type="button">Все</button>
+              </li>
+
+              <li>
+                <button class="button-portfo" type="button">Веб-сайты</button>
+              </li>
+              <li>
+                <button class="button-portfo" type="button">Приложения</button>
+              </li>
+              <li>
+                <button class="button-portfo" type="button">дизайн</button>
+              </li>
+              <li>
+                <button class="button-portfo" type="button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
+
+          <!-- section portfolio -->
+          <ul class="list-ul portfolio">
+            <li>
+              <img
+                src="./img/porfolio/imgTechnocrack.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Технокряк</h2>
+              <p class="portfo-desc">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgPoster.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">
+                Постер New Orlean vs Golden Star
+              </h2>
+              <p class="portfo-desc">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgRestoran.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Ресторан Seafood</h2>
+              <p class="portfo-desc">Приложения</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgProjectPrime.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Проект Prime</h2>
+              <p class="portfo-desc">Маркетинг</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgProjectBoxes.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Проект Boxes</h2>
+              <p class="portfo-desc">Приложения</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgBorders.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Inspiration has no Borders</h2>
+              <p class="portfo-desc">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgmagazine.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Издание Limited Edition</h2>
+              <p class="portfo-desc">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgLabel.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Проект LAB</h2>
+              <p class="portfo-desc">Маркетинг</p>
+            </li>
+            <li>
+              <img
+                src="./img/porfolio/imgBusiness.jpg"
+                alt="Технокряк"
+                width="370"
+              />
+              <h2 class="title title-portfo">Growing Business</h2>
+              <p class="portfo-desc">Приложения</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="container">
         <a
           href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
           class="logo"
         >
           <span class="logo-web">Web</span>Studio
         </a>
-        <ul class="list-ul site-nav">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li>
-            <a class="link current" href="./portfolio.html" target="_blank"
-              >Портфолио</a
-            >
-          </li>
-          <li><a class="link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <a class="contacts" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-    </header>
-    <!-- main porfolio -->
-    <main>
-      <section>
-        <!-- lot of booton -->
-        <ul class="list-ul">
-          <li>
-            <button class="button-portfo" type="button">Все</button>
-          </li>
-
-          <li>
-            <button class="button-portfo" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="button-portfo" type="button">Приложения</button>
-          </li>
-          <li>
-            <button class="button-portfo" type="button">дизайн</button>
-          </li>
-          <li>
-            <button class="button-portfo" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <!-- section portfolio -->
-
-        <ul class="list-ul">
-          <li>
-            <img
-              src="./img/porfolio/imgTechnocrack.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Технокряк</h2>
-            <p class="portfo-desc">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgPoster.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Постер New Orlean vs Golden Star</h2>
-            <p class="portfo-desc">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgRestoran.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Ресторан Seafood</h2>
-            <p class="portfo-desc">Приложения</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgProjectPrime.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Проект Prime</h2>
-            <p class="portfo-desc">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgProjectBoxes.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Проект Boxes</h2>
-            <p class="portfo-desc">Приложения</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgBorders.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Inspiration has no Borders</h2>
-            <p class="portfo-desc">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgmagazine.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Издание Limited Edition</h2>
-            <p class="portfo-desc">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgLabel.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Проект LAB</h2>
-            <p class="portfo-desc">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./img/porfolio/imgBusiness.jpg"
-              alt="Технокряк"
-              width="370"
-            />
-            <h2 class="title title-portfo">Growing Business</h2>
-            <p class="portfo-desc">Приложения</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!--FOOTER-->
-    <footer class="footer">
-      <a href="https://alex-nik-vel.github.io/goit-markup-hw-02/" class="logo">
-        <span class="logo-web">Web</span>Studio
-      </a>
-      <address class="footer-addres">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a class="footer-contacts" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="footer-contacts" href="tel:+38-096-111-11-11"
-          >+38 096 111 11 11</a
-        >
-      </address>
+        <address class="footer-addres">
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a class="footer-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="footer-contacts" href="tel:+38-096-111-11-11"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
