--- a/index.html
+++ b/index.html
@@ -19,32 +19,33 @@
   </head>
   <body>
     <!--TOP LINE (Header )-->
-    <header>
-      <div class="container header">
-        <div>
-          <nav class="nav">
-            <a
-              href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
-              class="logo"
-            >
-              <span class="logo-web">Web</span>Studio
-            </a>
-            <ul class="list-ul site-nav">
-              <li><a class="link current" href="./index.html">Студия</a></li>
-              <li>
-                <a class="link" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li><a class="link" href="">Контакты</a></li>
-            </ul>
-          </nav>
-        </div>
-
-        <div>
-          <a class="contacts" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <header class="p-header">
+      <div class="container main-nav">
+        <nav class="nav">
+          <a
+            href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
+            class="logo"
           >
-          <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
-        </div>
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <ul class="list-ul site-nav">
+            <li class="nav-item">
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="link" href="">Контакты</a></li>
+          </ul>
+          <div class="nav-contact list-ul" >
+            <a class="contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contacts" href="tel:+38-096-111-11-11"
+              >+38 096 111 11 11</a
+            >
+          </div>
+        </nav>
       </div>
     </header>
     <!--MAIN-->
