--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,16 @@
               <span class="logo-web">Web</span>Studio
             </a>
             <ul class="list-ul site-nav">
-              <li><a class="link current" href="./index.html">Студия</a></li>
-              <li>
-                <a class="link" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li><a class="link" href="">Контакты</a></li>
+              <li class="nav-item"><a class="link " href="./index.html">Студия</a></li>
+              <li class="nav-item">
+                <a class="link current" href="./portfolio.html">Портфолио</a>
+              </li >
+              <li class="nav-item"><a class="link" href="">Контакты</a></li>
             </ul>
           </nav>
         </div>
 
-        <div>
+        <div class="hea-contacts">
           <a class="contacts" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
@@ -52,7 +52,7 @@
         <div class="container">
           <!-- lot of booton -->
           <div class="btn-portfolio ">
-            <ul class="list-ul">
+            <ul class="list-ul btn-portfolio">
               <li>
                 <button class="button-portfo" type="button">Все</button>
               </li>
