Creat header-> porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,26 +19,25 @@
   </head>
   <body>
     <header>
-      <div class="container header">
-        <div>
-          <nav class="nav">
-            <a
-              href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
-              class="logo"
-            >
-              <span class="logo-web">Web</span>Studio
-            </a>
-            <ul class="list-ul site-nav">
-              <li class="nav-item"><a class="link " href="./index.html">Студия</a></li>
-              <li class="nav-item">
-                <a class="link current" href="./portfolio.html">Портфолио</a>
-              </li >
-              <li class="nav-item"><a class="link" href="">Контакты</a></li>
-            </ul>
-          </nav>
-        </div>
-
-        <div class="hea-contacts">
+      <div class="container main-nav">
+        <nav class="nav">
+          <a
+            href="https://alex-nik-vel.github.io/goit-markup-hw-02/"
+            class="logo"
+          >
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <ul class="list-ul site-nav">
+            <li class="nav-item">
+              <a class="link " href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="nav-contact list-ul">
           <a class="contacts" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
@@ -51,7 +50,7 @@
       <section class="portfo-section">
         <div class="container">
           <!-- lot of booton -->
-          <div class="btn-portfolio ">
+          <div class="btn-portfolio">
             <ul class="list-ul btn-portfolio">
               <li>
                 <button class="button-portfo" type="button">Все</button>
