--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
             </li>
             <li class="nav-item"><a class="link" href="">Контакты</a></li>
           </ul>
-          <div class="nav-contact list-ul" >
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-            <a class="contacts" href="tel:+38-096-111-11-11"
-              >+38 096 111 11 11</a
-            >
-          </div>
         </nav>
+        <div class="nav-contact list-ul">
+          <a class="contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts" href="tel:+38-096-111-11-11">+38 096 111 11 11</a>
+        </div>
       </div>
     </header>
     <!--MAIN-->
@@ -56,120 +54,120 @@
         <button class="button-hero" type="button">Заказать услугу</button>
       </section>
       <!--peculiarities(особенности)-->
-      <section class="section-pecul">
-        <div class="container">
-          <ul class="list-ul">
-            <li>
-              <h3 class="title title-pecul">Внимание к деталям</h3>
-              <p class="section-desc">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h3 class="title title-pecul">Пунктуальность</h3>
-              <p class="section-desc">
-                Задача организации, в особенности же рамки и место обучения
-                кадров. влечет за собой
-              </p>
-            </li>
-            <li>
-              <h3 class="title title-pecul">Планирование</h3>
-              <p class="section-desc">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li>
-              <h3 class="title title-pecul">Современные технологии</h3>
-              <p class="section-desc">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </div>
+      <section class="section-pecul container">
+        <!-- <div class="container"> -->
+        <ul class="list-ul list-pecul">
+          <li>
+            <h3 class="title title-pecul">Внимание к деталям</h3>
+            <p class="section-desc">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="title title-pecul">Пунктуальность</h3>
+            <p class="section-desc">
+              Задача организации, в особенности же рамки и место обучения
+              кадров. влечет за собой
+            </p>
+          </li>
+          <li>
+            <h3 class="title title-pecul">Планирование</h3>
+            <p class="section-desc">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="title title-pecul">Современные технологии</h3>
+            <p class="section-desc">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+        <!-- </div> -->
       </section>
 
       <!--What are we doing-->
-      <section class="section-do">
-        <div class="container">
-          <h2 class="title title-do">Чем мы занимаемся</h2>
-          <ul class="list-ul">
-            <li>
-              <img
-                src="img/our_work/img-1.jpg"
-                alt="Пишим код"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="img/our_work/img-2.jpg"
-                alt="Синхронизация с тел."
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="img/our_work/img-3.jpg"
-                alt="палитра цветов"
-                width="370"
-                height="294"
-              />
-            </li>
-          </ul>
-        </div>
+      <section class="section-do container">
+        <!-- <div class="container"> -->
+        <h2 class="title title-do">Чем мы занимаемся</h2>
+        <ul class="list-ul">
+          <li>
+            <img
+              src="img/our_work/img-1.jpg"
+              alt="Пишим код"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="img/our_work/img-2.jpg"
+              alt="Синхронизация с тел."
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="img/our_work/img-3.jpg"
+              alt="палитра цветов"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+        <!-- </div> -->
       </section>
       <!--our team-->
-      <section class="section-team">
-        <div class="container">
-          <h2 class="title title-teams">Наша команда</h2>
-          <ul class="list-ul">
-            <li class="list-team">
-              <img
-                src="img/Our_Team/imgIgor.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
-              <h3 class="title title-team">Игорь Демьяненко</h3>
-              <p class="team-desc">Product Designer</p>
-            </li>
-            <li class="list-team">
-              <img
-                src="img/Our_Team/imgOlga.jpg"
-                alt="Ольга Репина"
-                width="270"
-                height="260"
-              />
-              <h3 class="title title-team">Ольга Репина</h3>
-              <p class="team-desc">Frontend Developer</p>
-            </li>
-            <li class="list-team">
-              <img
-                src="img/Our_Team/imgHikola.jpg"
-                alt="Николай Тарасов"
-                width="270"
-                height="260"
-              />
-              <h3 class="title title-team">Николай Тарасов</h3>
-              <p class="team-desc">Marketing</p>
-            </li>
-            <li class="list-team">
-              <img
-                src="img/Our_Team/imgMikl.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-                height="260"
-              />
-              <h3 class="title title-team">Михаил Ермаков</h3>
-              <p class="team-desc">UI Designer</p>
-            </li>
-          </ul>
-        </div>
+      <section class="section-team container">
+        <!-- <div class="container"> -->
+        <h2 class="title title-teams">Наша команда</h2>
+        <ul class="list-ul">
+          <li class="list-team">
+            <img
+              src="img/Our_Team/imgIgor.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3 class="title title-team">Игорь Демьяненко</h3>
+            <p class="team-desc">Product Designer</p>
+          </li>
+          <li class="list-team">
+            <img
+              src="img/Our_Team/imgOlga.jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3 class="title title-team">Ольга Репина</h3>
+            <p class="team-desc">Frontend Developer</p>
+          </li>
+          <li class="list-team">
+            <img
+              src="img/Our_Team/imgHikola.jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3 class="title title-team">Николай Тарасов</h3>
+            <p class="team-desc">Marketing</p>
+          </li>
+          <li class="list-team">
+            <img
+              src="img/Our_Team/imgMikl.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3 class="title title-team">Михаил Ермаков</h3>
+            <p class="team-desc">UI Designer</p>
+          </li>
+        </ul>
+        <!-- </div> -->
       </section>
     </main>
     <!--FOOTER-->
