creat section pucul

--- a/index.html
+++ b/index.html
@@ -57,30 +57,30 @@
       <section class="section-pecul container">
         <!-- <div class="container"> -->
         <ul class="list-ul list-pecul">
-          <li>
+          <li class="pecul-item">
             <h3 class="title title-pecul">Внимание к деталям</h3>
-            <p class="section-desc">
+            <p class="pecul-desc">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="pecul-item">
             <h3 class="title title-pecul">Пунктуальность</h3>
-            <p class="section-desc">
+            <p class="pecul-desc">
               Задача организации, в особенности же рамки и место обучения
               кадров. влечет за собой
             </p>
           </li>
-          <li>
+          <li class="pecul-item">
             <h3 class="title title-pecul">Планирование</h3>
-            <p class="section-desc">
+            <p class="pecul-desc">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="pecul-item">
             <h3 class="title title-pecul">Современные технологии</h3>
-            <p class="section-desc">
+            <p class="pecul-desc">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
