creat btn porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,20 +52,20 @@
           <!-- lot of booton -->
           <div class="btn-portfolio">
             <ul class="list-ul btn-portfolio">
-              <li>
+              <li class="portfo-item">
                 <button class="button-portfo" type="button">Все</button>
               </li>
 
-              <li>
+              <li class="portfo-item">
                 <button class="button-portfo" type="button">Веб-сайты</button>
               </li>
-              <li>
+              <li class="portfo-item">
                 <button class="button-portfo" type="button">Приложения</button>
               </li>
-              <li>
+              <li class="portfo-item">
                 <button class="button-portfo" type="button">дизайн</button>
               </li>
-              <li>
+              <li class="portfo-item">
                 <button class="button-portfo" type="button">Маркетинг</button>
               </li>
             </ul>
