Зазоры img --> porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <section class="portfo-section">
         <div class="container">
           <!-- lot of booton -->
-          <div class="btn-portfolio">
+          <div class="btn-portfolio"> 
             <ul class="list-ul btn-portfolio">
               <li class="portfo-item">
                 <button class="button-portfo" type="button">Все</button>
@@ -73,7 +73,7 @@
 
           <!-- section portfolio -->
           <ul class="list-ul portfolio">
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgTechnocrack.jpg"
                 alt="Технокряк"
@@ -82,7 +82,7 @@
               <h2 class="title title-portfo">Технокряк</h2>
               <p class="portfo-desc">Веб-сайт</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgPoster.jpg"
                 alt="Технокряк"
@@ -93,7 +93,7 @@
               </h2>
               <p class="portfo-desc">Дизайн</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgRestoran.jpg"
                 alt="Технокряк"
@@ -102,7 +102,7 @@
               <h2 class="title title-portfo">Ресторан Seafood</h2>
               <p class="portfo-desc">Приложения</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgProjectPrime.jpg"
                 alt="Технокряк"
@@ -111,7 +111,7 @@
               <h2 class="title title-portfo">Проект Prime</h2>
               <p class="portfo-desc">Маркетинг</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgProjectBoxes.jpg"
                 alt="Технокряк"
@@ -120,7 +120,7 @@
               <h2 class="title title-portfo">Проект Boxes</h2>
               <p class="portfo-desc">Приложения</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgBorders.jpg"
                 alt="Технокряк"
@@ -129,7 +129,7 @@
               <h2 class="title title-portfo">Inspiration has no Borders</h2>
               <p class="portfo-desc">Веб-сайт</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgmagazine.jpg"
                 alt="Технокряк"
@@ -138,7 +138,7 @@
               <h2 class="title title-portfo">Издание Limited Edition</h2>
               <p class="portfo-desc">Дизайн</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgLabel.jpg"
                 alt="Технокряк"
@@ -147,7 +147,7 @@
               <h2 class="title title-portfo">Проект LAB</h2>
               <p class="portfo-desc">Маркетинг</p>
             </li>
-            <li>
+            <li class="p-item">
               <img
                 src="./img/porfolio/imgBusiness.jpg"
                 alt="Технокряк"
