creaat section->index

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <button class="button-hero" type="button">Заказать услугу</button>
       </section>
       <!--peculiarities(особенности)-->
-      <section class="section-pecul container">
-        <!-- <div class="container"> -->
+      <section class="section-pecul">
+        <div class="container">
         <ul class="list-ul list-pecul">
           <li class="pecul-item">
             <h3 class="title title-pecul">Внимание к деталям</h3>
@@ -86,15 +86,15 @@
             </p>
           </li>
         </ul>
-        <!-- </div> -->
+        </div>
       </section>
 
       <!--What are we doing-->
-      <section class="section-do container">
-        <!-- <div class="container"> -->
+      <section class="section-do">
+        <div class="container">
         <h2 class="title title-do">Чем мы занимаемся</h2>
-        <ul class="list-ul">
-          <li>
+        <ul class="list-ul ">
+          <li class="do-item">
             <img
               src="img/our_work/img-1.jpg"
               alt="Пишим код"
@@ -102,7 +102,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="do-item">
             <img
               src="img/our_work/img-2.jpg"
               alt="Синхронизация с тел."
@@ -110,7 +110,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="do-item">
             <img
               src="img/our_work/img-3.jpg"
               alt="палитра цветов"
@@ -119,11 +119,11 @@
             />
           </li>
         </ul>
-        <!-- </div> -->
+        </div>
       </section>
       <!--our team-->
-      <section class="section-team container">
-        <!-- <div class="container"> -->
+      <section class="section-team">
+        <div class="container">
         <h2 class="title title-teams">Наша команда</h2>
         <ul class="list-ul">
           <li class="list-team">
@@ -167,7 +167,7 @@
             <p class="team-desc">UI Designer</p>
           </li>
         </ul>
-        <!-- </div> -->
+        </div>
       </section>
     </main>
     <!--FOOTER-->
