виправив HEADER убрав ширину

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="p-header">
       <div class="container main-nav">
         <nav class="nav">
           <a
@@ -51,7 +51,7 @@
         <div class="container">
           <!-- lot of booton -->
           <div class="btn-portfolio"> 
-            <ul class="list-ul btn-portfolio">
+            <ul class="list-ul">
               <li class="portfo-item">
                 <button class="button-portfo" type="button">Все</button>
               </li>
