--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           </a>
           <ul class="list-ul site-nav">
             <li class="nav-item">
-              <a class="link " href="./index.html">Студия</a>
+              <a class="link" href="./index.html">Студия</a>
             </li>
             <li class="nav-item">
               <a class="link current" href="./portfolio.html">Портфолио</a>
@@ -50,7 +50,7 @@
       <section class="portfo-section">
         <div class="container">
           <!-- lot of booton -->
-          <div class="btn-portfolio"> 
+          <div class="btn-portfolio">
             <ul class="list-ul">
               <li class="portfo-item">
                 <button class="button-portfo" type="button">Все</button>
@@ -79,8 +79,10 @@
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Технокряк</h2>
-              <p class="portfo-desc">Веб-сайт</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Технокряк</h2>
+                <p class="portfo-desc">Веб-сайт</p>
+              </div>
             </li>
             <li class="p-item">
               <img
@@ -88,10 +90,12 @@
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p class="portfo-desc">Дизайн</p>
+              <div class="specific">
+                <h2 class="title title-portfo">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfo-desc">Дизайн</p>
+              </div>
             </li>
             <li class="p-item">
               <img
@@ -99,8 +103,10 @@
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Ресторан Seafood</h2>
-              <p class="portfo-desc">Приложения</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Ресторан Seafood</h2>
+                <p class="portfo-desc">Приложения</p>
+              </div>
             </li>
             <li class="p-item">
               <img
@@ -108,8 +114,10 @@
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Проект Prime</h2>
-              <p class="portfo-desc">Маркетинг</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Проект Prime</h2>
+                <p class="portfo-desc">Маркетинг</p>
+              </div>
             </li>
             <li class="p-item">
               <img
@@ -117,44 +125,58 @@
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Проект Boxes</h2>
-              <p class="portfo-desc">Приложения</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Проект Boxes</h2>
+                <p class="portfo-desc">Приложения</p>
+              </div>
             </li>
+
             <li class="p-item">
               <img
                 src="./img/porfolio/imgBorders.jpg"
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Inspiration has no Borders</h2>
-              <p class="portfo-desc">Веб-сайт</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Inspiration has no Borders</h2>
+                <p class="portfo-desc">Веб-сайт</p>
+              </div>
             </li>
+
             <li class="p-item">
               <img
                 src="./img/porfolio/imgmagazine.jpg"
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Издание Limited Edition</h2>
-              <p class="portfo-desc">Дизайн</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Издание Limited Edition</h2>
+                <p class="portfo-desc">Дизайн</p>
+              </div>
             </li>
+
             <li class="p-item">
               <img
                 src="./img/porfolio/imgLabel.jpg"
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Проект LAB</h2>
-              <p class="portfo-desc">Маркетинг</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Проект LAB</h2>
+                <p class="portfo-desc">Маркетинг</p>
+              </div>
             </li>
+
             <li class="p-item">
               <img
                 src="./img/porfolio/imgBusiness.jpg"
                 alt="Технокряк"
                 width="370"
               />
-              <h2 class="title title-portfo">Growing Business</h2>
-              <p class="portfo-desc">Приложения</p>
+              <div class="specific">
+                <h2 class="title title-portfo">Growing Business</h2>
+                <p class="portfo-desc">Приложения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -174,6 +196,7 @@
           <a class="footer-contacts" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
+          <br />
           <a class="footer-contacts" href="tel:+38-096-111-11-11"
             >+38 096 111 11 11</a
           >
