--- a/index.html
+++ b/index.html
@@ -56,117 +56,125 @@
       <!--peculiarities(особенности)-->
       <section class="section-pecul">
         <div class="container">
-        <ul class="list-ul list-pecul">
-          <li class="pecul-item">
-            <h3 class="title title-pecul">Внимание к деталям</h3>
-            <p class="pecul-desc">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="pecul-item">
-            <h3 class="title title-pecul">Пунктуальность</h3>
-            <p class="pecul-desc">
-              Задача организации, в особенности же рамки и место обучения
-              кадров. влечет за собой
-            </p>
-          </li>
-          <li class="pecul-item">
-            <h3 class="title title-pecul">Планирование</h3>
-            <p class="pecul-desc">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="pecul-item">
-            <h3 class="title title-pecul">Современные технологии</h3>
-            <p class="pecul-desc">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+          <ul class="list-ul list-pecul">
+            <li class="pecul-item">
+              <h3 class="title title-pecul">Внимание к деталям</h3>
+              <p class="pecul-desc">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="pecul-item">
+              <h3 class="title title-pecul">Пунктуальность</h3>
+              <p class="pecul-desc">
+                Задача организации, в особенности же рамки и место обучения
+                кадров. влечет за собой
+              </p>
+            </li>
+            <li class="pecul-item">
+              <h3 class="title title-pecul">Планирование</h3>
+              <p class="pecul-desc">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="pecul-item">
+              <h3 class="title title-pecul">Современные технологии</h3>
+              <p class="pecul-desc">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
       <!--What are we doing-->
       <section class="section-do">
         <div class="container">
-        <h2 class="title title-do">Чем мы занимаемся</h2>
-        <ul class="list-ul ">
-          <li class="do-item">
-            <img
-              src="img/our_work/img-1.jpg"
-              alt="Пишим код"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="do-item">
-            <img
-              src="img/our_work/img-2.jpg"
-              alt="Синхронизация с тел."
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="do-item">
-            <img
-              src="img/our_work/img-3.jpg"
-              alt="палитра цветов"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+          <h2 class="title title-do">Чем мы занимаемся</h2>
+          <ul class="list-ul">
+            <li class="do-item">
+              <img
+                src="img/our_work/img-1.jpg"
+                alt="Пишим код"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="do-item">
+              <img
+                src="img/our_work/img-2.jpg"
+                alt="Синхронизация с тел."
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="do-item">
+              <img
+                src="img/our_work/img-3.jpg"
+                alt="палитра цветов"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
         </div>
       </section>
       <!--our team-->
       <section class="section-team">
         <div class="container">
-        <h2 class="title title-teams">Наша команда</h2>
-        <ul class="list-ul">
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgIgor.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Игорь Демьяненко</h3>
-            <p class="team-desc">Product Designer</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgOlga.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Ольга Репина</h3>
-            <p class="team-desc">Frontend Developer</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgHikola.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Николай Тарасов</h3>
-            <p class="team-desc">Marketing</p>
-          </li>
-          <li class="list-team">
-            <img
-              src="img/Our_Team/imgMikl.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="title title-team">Михаил Ермаков</h3>
-            <p class="team-desc">UI Designer</p>
-          </li>
-        </ul>
+          <h2 class="title title-teams">Наша команда</h2>
+          <ul class="list-ul">
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgIgor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="desc-teams">
+                <h3 class="title title-team">Игорь Демьяненко</h3>
+                <p class="team-desc">Product Designer</p>
+              </div>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgOlga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <div class="desc-teams">
+                <h3 class="title title-team">Ольга Репина</h3>
+                <p class="team-desc">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgHikola.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="desc-teams">
+                <h3 class="title title-team">Николай Тарасов</h3>
+                <p class="team-desc">Marketing</p>
+              </div>
+            </li>
+            <li class="list-team">
+              <img
+                src="img/Our_Team/imgMikl.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <div class="desc-teams">
+                <h3 class="title title-team">Михаил Ермаков</h3>
+                <p class="team-desc">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -184,9 +192,15 @@
           <a class="footer-contacts" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
+          <br />
           <a class="footer-contacts" href="tel:+38-096-111-11-11"
             >+38 096 111 11 11</a
           >
+          <!-- <p><a class="footer-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          ></p> 
+          <p><a class="footer-contacts" href="tel:+38-096-111-11-11"
+            >+38 096 111 11 11</a></p>  -->
         </address>
       </div>
     </footer>
