--- a/portfolio.html
+++ b/portfolio.html
@@ -50,27 +50,24 @@
       <section class="portfo-section">
         <div class="container">
           <!-- lot of booton -->
-          <div class="btn-portfolio">
-            <ul class="list-ul">
-              <li class="portfo-item">
-                <button class="button-portfo" type="button">Все</button>
-              </li>
+          <ul class="list-ul btn-portfolio">
+            <li class="portfo-item">
+              <button class="button-portfo" type="button">Все</button>
+            </li>
 
-              <li class="portfo-item">
-                <button class="button-portfo" type="button">Веб-сайты</button>
-              </li>
-              <li class="portfo-item">
-                <button class="button-portfo" type="button">Приложения</button>
-              </li>
-              <li class="portfo-item">
-                <button class="button-portfo" type="button">дизайн</button>
-              </li>
-              <li class="portfo-item">
-                <button class="button-portfo" type="button">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
-
+            <li class="portfo-item">
+              <button class="button-portfo" type="button">Веб-сайты</button>
+            </li>
+            <li class="portfo-item">
+              <button class="button-portfo" type="button">Приложения</button>
+            </li>
+            <li class="portfo-item">
+              <button class="button-portfo" type="button">дизайн</button>
+            </li>
+            <li class="portfo-item">
+              <button class="button-portfo" type="button">Маркетинг</button>
+            </li>
+          </ul>
           <!-- section portfolio -->
           <ul class="list-ul portfolio">
             <li class="p-item">
